--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "jquery": "^3.3.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "react-on-rails": "^10.1.3"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
