--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "@rails/webpacker": "3.4",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "3",
+    "canvas": "^1.6.10",
     "jquery": "^3.3.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-on-rails": "^10.1.3"
+    "react-on-rails": "^10.1.3",
+    "trianglify": "^1.2.0"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
